test/data/resolver/valid/create_then_return.cypher
CREATE (n:Person) RETURN n.name
