test/data/resolver/invalid/remove_property_unknown.cypher
MATCH (n:Person) REMOVE n.notAProp RETURN n
